# nexus-wingman-uploader

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yaml
src/: arcdpslog.rs  assets.rs  common.rs  dpslog.rs  dpsreport.rs  dpsreportupload.rs  error.rs  evtc.rs  evtcparsing.rs  filewatcher.rs  lib.rs  log.rs  settings.rs  ui.rs  util.rs  wingman.rs  wingmanupload.rs
