[package]
name = "wingman-uploader"
version = "0.7.0"
edition = "2021"
description = "Wingman Uploader"
authors = ["belst"]

[lib]
crate-type = ["cdylib"]
name = "wingmanuploader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
LegalCopyright = "Copyright © 2024-2025"


[dependencies]
anyhow = "1.0.79"
atomic_float = "0.1.0"
native-tls = "0.2.11"
notify = "6.1.1"
once_cell = "1.18.0"
serde = { version = "1.0.195", features = ["derive"] }
ureq = { version = "2.9.1", features = ["json", "native-tls"] }
ureq_multipart = "1.1.1"
serde_json = "1.0.111"
dirs-next = "2.0.0"
open = "5.0.1"
log = "0.4.21"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices"
]

[target.'cfg(windows)'.dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs"
features = ["log"]

