[package]
name = "log_uploader"
version = "1.4.1"
edition = "2024"
authors = ["belst"]
description = "Uploads new arcdps logs to dps.report and/or wingman"

[lib]
crate-type = ["cdylib"]
name = "log_uploader"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.40", features = ["clock"] }
dirs-next = "2.0.0"
log = "0.4.22"
notify = "8.0.0"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.12.1", features = ["json"] }
ureq_multipart = "1.1.1"
winecheck = "0.1.0"

[dependencies.windows]
version = "0.60.0"
features = ["Win32_System_Threading", "Win32_UI_Shell_Common"]

[dependencies.revtc]
git = "https://github.com/belst/revtc"

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs"
features = ["log", "log_filter"]
